data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_736.wast
;; 7. **Test Description:**    - A `br_if` statement inside an `if` block where the condition is a comparison between two local variables set within a loop (ensuring one variable changes inside the loop).    - **Constraint Checked:** Accurate comparison evaluation under looping variable changes.    - **Test Relation:** Ensures branching decisions are correct when comparing dynamically changing values within loops.

(assert_invalid
  (module
    (func $loop-variable-test
      (local $x i32) (local $y i32)
      (loop
        (local.set $x (i32.const 0))
        (local.set $y (i32.add (local.get $y) (i32.const 1)))
        (block
          (if (i32.eq (local.get $x) (local.get $y))
            (then (br_if 0 (i32.const 1)))
          )
        )
      )
    )
  )
  "type mismatch"
)